--- a/src/myStyles.scss
+++ b/src/myStyles.scss
@@ -2,6 +2,11 @@ body {
   background-color: gray;
 }
 
+#appContainer {
+  position: relative;
+  top: 2em;
+}
+
 h1 {
   text-align: center;
   text-decoration: underline;
@@ -140,6 +145,6 @@ a {
 }
 
 #footer {
-  margin-top: 3em;
+  margin-top: 2em;
   text-align: center;
 }
